2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 565846 – "va_end(args);" should be added into gtk_tree_store_new

	* gtk/gtktreestore.c (gtk_tree_store_new): Add a missing
	va_end() call. Pointed out by Jiwon Lee.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Code cleanups; get rid of get_text_area_size,
	replace get_icon_allocation by get_icon_allocations, don't
	pass allocation to place_windows; other stylistic changes to 
	the icon-related code.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Avoid size allocation loops.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Fix errors in property definitions and
	get_property implementation.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c: Redo the Caps Lock warning using an icon.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 558694 – Paned window splitter keynav broken

	* gtk/gtkpaned.c (get_child_panes): Don't add unrealized
	widgets.

2008-12-30  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkstyle.c:
	* gtk/gtkmenutooltbutton.c:
	* gtk/gtkprintoperationpreview.c: Doc additions

2008-12-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconview.c:
	* gtk/gtklabel.c:
	* gtk/gtkentry.c:
	* gtk/gtktextview.c:
	* gtk/gtkeditable.c: 
	* gtk/gtktextbuffer.c: Doc additions.

2008-12-29  Tor Lillqvist  <tml@novell.com>

	* gtk/gtk.symbols: Add missing symbols from gtkentry.c.

2008-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwindow.c: 
	* gtk/gtkstyle.c: Doc additions

2008-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk[hv]scrollbar.c: Document gtk_[hv]scrollbar_new.

2008-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwidget.c: Document gtk_mnemonic_activate.

2008-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktextlayout.c: Un-doc-commentize non-public api

2008-12-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkprogress.h: Fix a typo
